--- a/scss/main.scss
+++ b/scss/main.scss
@@ -12,7 +12,7 @@
     }
     
     body {
-        background: url(../img/BGtexture.jpg);
+        background: url(../img/BGtexture.jpg), #b07027;
         cursor: default;
     }
     
